--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "validator": "^13.11.0"
