--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "helmet": "^7.0.0",
-    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "validator": "^13.11.0"
